# EvPong

./: readme.md
linux/: CMakeLists.txt  build.sh
linux/src/: ball.c  ball.h  cpu.h  main.c  player.h  sound.h
src/: cpu.c  gfx.c  gfx.h  input.c  input.h  player.c  sound.c
